--- a/roles/ansible-role-delete_service/tasks/main.yml
+++ b/roles/ansible-role-delete_service/tasks/main.yml
@@ -1,14 +1,11 @@
 ---
+- name: Install the latest version of consul
+  yum:
+    name: consul
+    state: latest
+
 - name: Restart Consul
   ansible.builtin.systemd:
     name: consul.service
     state: restarted
     enabled: yes
-
-# - name: delete systemd unit file 
-#   ansible.builtin.file:
-#     path: /etc/systemd/system/jmx_exporter23176.service
-#     state: absent
-
-# - name: systemctl reset-failed
-#   ansible.builtin.command: systemctl reset-failed
